# EchoWorks

./: README.md
code/: .eslintrc.json  .gitignore  .prettierrc  LEARNING.md  README.md  REQUIREMENTS.md  package.json  pnpm-workspace.yaml  tsconfig.json  turbo.json
code/apps/api/: .env.example  Cargo.toml  package.json
code/apps/api/migrations/: 001_initial.sql
code/apps/api/src/: config.rs  errors.rs  main.rs
code/apps/api/src/middleware/: auth.rs
code/apps/api/src/routes/: auth.rs  learning.rs  mod.rs  playlists.rs  search.rs  songs.rs  upload.rs  users.rs  video.rs
code/apps/desktop/: next.config.js  package.json  tsconfig.json
code/apps/desktop/src/: App.tsx
code/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
code/apps/desktop/src-tauri/src/: lib.rs  main.rs
code/apps/mobile/: App.tsx  app.json  package.json
code/apps/mobile/src/screens/: HomeScreen.tsx  LibraryScreen.tsx  SearchScreen.tsx  SongPlayerScreen.tsx
code/apps/web/: next.config.js  package.json  tailwind.config.ts  tsconfig.json
code/apps/web/src/app/: globals.css  layout.tsx  page.tsx
code/core/lyricshare-core/: Cargo.toml
code/core/lyricshare-core/src/: lib.rs  parser.rs  renderer.rs  sync.rs  types.rs
