[package]
name = "lyricshare-core"
version = "0.1.0"
edition = "2021"
description = "LyricShare core engine - LRC/SRT parser, lyric sync, video frame generation"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[features]
default = ["wasm"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = { version = "0.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
